--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,33 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-gunicorn==21.2.0
-python-multipart==0.0.6
-weaviate-client==4.4.0
+annotated-types==0.7.0
+anyio==4.10.0
+authlib==1.6.4
+certifi==2025.8.3
+cffi==2.0.0
+click==8.2.1
+cryptography==46.0.1
+deprecation==2.1.0
+fastapi==0.116.2
+grpcio==1.75.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+packaging==25.0
+protobuf==6.32.1
+pycparser==2.23
+pydantic==2.11.9
+pydantic-core==2.33.2
+python-dotenv==1.1.1
+python-multipart==0.0.20
+pyyaml==6.0.2
+sniffio==1.3.1
+starlette==0.48.0
+typing-extensions==4.15.0
+typing-inspection==0.4.1
+uvicorn==0.35.0
+uvloop==0.21.0
+validators==0.35.0
+watchfiles==1.1.0
+weaviate-client==4.16.10
+websockets==15.0.1
