--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.2",
+    "gunicorn>=23.0.0",
     "python-multipart>=0.0.20",
     "uvicorn[standard]>=0.35.0",
     "weaviate-client>=4.16.10",
